# era5

./: README.md  README.rst  README.txt  cli.py  cli_nodb.py  config.json  config.json.tmp  era5_config.py  era5_delete_record.py  era5_down_clef.py  era5_download.py  era5_functions.py  era5_land_hr.json  era5_pressure.json  era5_pressure_hr.json  era5_pressure_mon.json  era5_recipe  era5_surface.json  era5_surface_hr.json  era5_surface_mon.json  era5_update_db.py  era5_vars.json  era5_wave.json  era5_wave_hr.json  era5_wrapper.sh  era5_wrapper.sh.temp  era5_wrapper_sing.sh  find_grib_codes.py  requirements.txt  setup.cfg  setup.py  sing.sh  update_json_vars.py
cdsapi/: api.py  api.py.bak
data/: era5_fire_day.json  era5_indices.json  era5_land_mon.json  era5_surface_hr.json  era5_surface_mon.json  era5_vars.json  era5_wave_mon.json
docs/: gettingstarted.rst
era5/: cli.py  era5_db.py  era5_delete_record.py  era5_functions.py  era5_update_db.py
era5/data/: config.json  config.json.tmp  era5_agro_day.json  era5_cems_fire_day.json  era5_derived.json  era5_fire_day.json  era5_land_hr.json  era5_pressure51_hr.json  era5_pressure51_mon.json  era5_pressure_hr.json  era5_pressure_mon.json  era5_surface_mon.json  era5_vars.json  era5_wfde5_hr.json
