[metadata]
name = era5
author = Paola Petrelli
author-email = paola.petrelli@utas.edu.au
summary = "Download ERA5 from CDS Data Store using their cdsapi" 
description-file = README.rst
licence = Apache 2.0
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages = 
    era5
package-data =
    era5 = data/*json

[pbr]
autodoc_tree_index_modules = True
autodoc_tree_excludes =
    setup.py
    conftest.py
    test

[extras]
# Optional dependencies
dev = 
    pytest
    sphinx

[entry_points]
console_scripts =
    era5 = era5.cli:era5_catch
#    arx = clef.cli:arx

[build_sphinx]
source-dir = docs
build-dir = docs/_build

[tool:pytest]
addopts = --doctest-modules --doctest-glob='*.rst' --ignore setup.py --ignore conftest.py --ignore docs/conf.py
